More voiceover stuff + fixed filter page overflowing

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,5 +1,6 @@
 * {
-    font-family: "Gotham SSm A";
+    /* font-family: "Gotham SSm A"; */
+    font-family: 'Montserrat'
 }
 
 .App {
